--- a/style1.css
+++ b/style1.css
@@ -55,14 +55,6 @@ p {
   color: black;
 }
 @media only screen and (min-width: 320px) and (max-width: 480px) {
-  .boxContainer {
-    margin-top: 50px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    justify-content: space-evenly;
-  }
   .container {
     display: flex;
     flex-direction: row;
@@ -75,7 +67,7 @@ p {
     color: red;
   }
   .box1 {
-    margin-right: 172px;
+    margin-right: 60px;
     font-size: 13px;
   }
   .box2 {
@@ -84,5 +76,41 @@ p {
   .text {
     font-size: 17px;
     color: red;
+  }
+  .boxContainer {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: space-around;
+  }
+  .style {
+    font-weight: 10;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  }
+  .box {
+    height: 100px;
+    width: 240px;
+    border: 1px solid red;
+    box-shadow: 1px 1px 1px gray;
+    border-radius: 10px;
+    text-align: center;
+    color: red;
+    margin: 10px;
+  }
+  .space {
+  }
+  h2 {
+    font-size: 13px;
+  }
+  p {
+    text-decoration: line-through;
+    font-size: 13px;
+  }
+  .checkBox {
+    font-size: 13px;
+    color: black;
   }
 }
