--- a/style2.css
+++ b/style2.css
@@ -23,6 +23,9 @@ body {
   width: 50%;
   text-align: center;
 }
+.style {
+  font-size: 23px;
+}
 .box {
   height: 350px;
   width: 350px;
@@ -55,26 +58,33 @@ p {
     padding-top: 15px;
   }
   .header {
-    width: 50%;
-    height: 15px;
     text-align: center;
-    margin: auto;
+    border: none;
   }
   .welcome {
-    font-size: 13px;
+    font-size: 20px;
     background-color: white;
-    padding: 0 2px;
-    font-weight: 100;
+    color: black;
+    border: none;
   }
   .text {
-    font-size: 17px;
+    font-size: 20px;
     color: red;
   }
   .middle {
-    margin: 25px 150px;
-    width: 50%;
     text-align: center;
+    font-size: 16px;
+    position: absolute;
+    top: -24px;
+    left: -300px;
   }
+  /* .top {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+  } */
   .box {
     margin-top: 40px;
     height: 230px;
@@ -84,7 +94,7 @@ p {
     border-radius: 5px;
     text-align: center;
     color: red;
-    margin: auto;
+    margin: 100px auto;
   }
   .space {
     margin-left: 25px;
