--- a/style3.css
+++ b/style3.css
@@ -56,7 +56,7 @@ p {
   color: black;
 }
 .index3 {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   width: 90%;
   position: absolute;
   top: 5px;
@@ -87,14 +87,6 @@ button {
   border-radius: 20px;
 }
 @media only screen and (min-width: 320px) and (max-width: 480px) {
-  .boxContainer {
-    margin-top: 50px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    justify-content: space-evenly;
-  }
   .container {
     display: flex;
     flex-direction: row;
@@ -107,7 +99,7 @@ button {
     color: red;
   }
   .box1 {
-    margin-right: 172px;
+    margin-right: 60px;
     font-size: 13px;
   }
   .box2 {
@@ -117,11 +109,45 @@ button {
     font-size: 17px;
     color: red;
   }
+  .boxContainer {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: space-around;
+  }
+  .style {
+    font-weight: 10;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  }
+  .box {
+    height: 100px;
+    width: 240px;
+    border: 1px solid red;
+    box-shadow: 1px 1px 1px gray;
+    border-radius: 10px;
+    text-align: center;
+    color: red;
+    margin: 10px;
+  }
+
+  h2 {
+    font-size: 13px;
+  }
+  p {
+    text-decoration: line-through;
+    font-size: 13px;
+  }
+  .checkBox {
+    font-size: 13px;
+    color: black;
+  }
   .index3 {
-    border: 1px solid black;
     width: 90%;
     position: absolute;
-    top: 30px;
+    top: 100px;
 
     height: 180px;
     z-index: 2;
@@ -129,16 +155,18 @@ button {
   form {
     text-align: center;
     color: red;
-    width: 30%;
-    height: 70px;
+    width: 50%;
+    height: 120px;
     margin: auto;
     border: 1px solid red;
     margin-top: 70px;
-    font-size: 10px;
+    font-size: 13px;
+    padding-top: 20px;
+    border-radius: 6px;
   }
   input {
     border: 1px solid red;
-    height: 6px;
+    height: 16px;
     width: 50%;
     box-shadow: 2px 2px 2px gray;
     border-radius: 6px;
@@ -146,7 +174,7 @@ button {
   button {
     color: white;
     background-color: red;
-    width: 60%;
+    width: 20%;
     height: 15px;
     border-radius: 6px;
     font-size: 10px;
